--- a/user-service/frontend/package.json
+++ b/user-service/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-jitsi": "^1.0.4",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
